// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transaction Notification renders an send ether notification correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 8,
      "elevation": 2,
      "flex": 0,
      "margin": 4,
      "marginBottom": 26,
      "opacity": 1,
      "shadowColor": "rgba(0,0,0,0.07)",
      "shadowOffset": Object {
        "height": -1,
        "width": 0,
      },
      "shadowRadius": 12,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flex": 0,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "stretch",
          "alignSelf": "stretch",
          "borderBottomColor": "rgba(226,226,226,1)",
          "borderBottomWidth": 1,
          "marginBottom": 19,
          "marginTop": 19,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Regular",
            "fontSize": 22,
            "lineHeight": 30,
            "padding": 19,
            "paddingTop": 0,
            "textAlign": "center",
          }
        }
      >
        Confirm Transaction
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flex": 0,
                "justifyContent": "center",
              },
              Object {
                "backgroundColor": "white",
                "borderRadius": 50,
                "height": 60,
                "width": 60,
              },
            ]
          }
        >
          <Image
            resizeMode="cover"
            source={Object {}}
            style={
              Array [
                Object {
                  "borderRadius": 30,
                  "height": 60,
                  "width": 60,
                },
                Object {
                  "position": "absolute",
                },
                Array [
                  Object {
                    "borderRadius": 30,
                    "height": 60,
                    "width": 60,
                  },
                  undefined,
                ],
              ]
            }
          />
        </View>
      </View>
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/ForwardArrow.png",
          }
        }
        style={
          Object {
            "height": 18,
            "marginLeft": 24,
            "marginRight": 24,
            "width": 26,
          }
        }
      />
      <View>
        <View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 0,
                  "justifyContent": "center",
                },
                Object {
                  "backgroundColor": "white",
                  "borderRadius": 50,
                  "height": 60,
                  "width": 60,
                },
              ]
            }
          >
            <Image
              resizeMode="cover"
              source={Object {}}
              style={
                Array [
                  Object {
                    "borderRadius": 30,
                    "height": 60,
                    "width": 60,
                  },
                  Object {
                    "position": "absolute",
                  },
                  Array [
                    Object {
                      "borderRadius": 30,
                      "height": 60,
                      "width": 60,
                    },
                    undefined,
                  ],
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Regular",
            "fontSize": 20,
            "lineHeight": 27,
            "textAlign": "center",
          },
          Object {
            "margin": 10,
          },
        ]
      }
    >
      You signed a transaction
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(74,74,74,1)",
          "fontFamily": "NunitoSans-Light",
          "fontSize": 16,
          "lineHeight": 22,
          "textAlign": "center",
        }
      }
    >
      Sent 0.000000000000000035 ETH
    </Text>
    <View
      style={
        Object {
          "flex": 0,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "borderRadius": 8,
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 15,
              "padding": 10,
            },
            Array [
              Object {
                "borderColor": "rgba(74,74,74,1)",
                "borderWidth": 1,
                "padding": 15,
              },
              Object {
                "marginRight": 10,
              },
            ],
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "Montserrat",
                "fontSize": 18,
                "textAlign": "center",
              },
              Object {
                "color": "rgba(74,74,74,1)",
              },
              Object {},
            ]
          }
        >
          Reject
        </Text>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "borderRadius": 8,
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 15,
              "padding": 10,
            },
            Array [
              Object {
                "backgroundColor": "rgba(91,84,199,1)",
                "padding": 15,
              },
              undefined,
            ],
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "Montserrat",
                "fontSize": 18,
                "textAlign": "center",
              },
              Object {
                "color": "#FFFFFF",
              },
              Object {},
            ]
          }
        >
          Approve
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Transaction Notification renders an transaction notification correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 8,
      "elevation": 2,
      "flex": 0,
      "margin": 4,
      "marginBottom": 26,
      "opacity": 1,
      "shadowColor": "rgba(0,0,0,0.07)",
      "shadowOffset": Object {
        "height": -1,
        "width": 0,
      },
      "shadowRadius": 12,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flex": 0,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "stretch",
          "alignSelf": "stretch",
          "borderBottomColor": "rgba(226,226,226,1)",
          "borderBottomWidth": 1,
          "marginBottom": 19,
          "marginTop": 19,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Regular",
            "fontSize": 22,
            "lineHeight": 30,
            "padding": 19,
            "paddingTop": 0,
            "textAlign": "center",
          }
        }
      >
        Confirm Transaction
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flex": 0,
                "justifyContent": "center",
              },
              Object {
                "backgroundColor": "white",
                "borderRadius": 50,
                "height": 60,
                "width": 60,
              },
            ]
          }
        >
          <Image
            resizeMode="cover"
            source={Object {}}
            style={
              Array [
                Object {
                  "borderRadius": 30,
                  "height": 60,
                  "width": 60,
                },
                Object {
                  "position": "absolute",
                },
                Array [
                  Object {
                    "borderRadius": 30,
                    "height": 60,
                    "width": 60,
                  },
                  undefined,
                ],
              ]
            }
          />
        </View>
      </View>
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/ForwardArrow.png",
          }
        }
        style={
          Object {
            "height": 18,
            "marginLeft": 24,
            "marginRight": 24,
            "width": 26,
          }
        }
      />
      <View>
        <View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 0,
                  "justifyContent": "center",
                },
                Object {
                  "backgroundColor": "white",
                  "borderRadius": 50,
                  "height": 60,
                  "width": 60,
                },
              ]
            }
          >
            <Image
              resizeMode="cover"
              source={Object {}}
              style={
                Array [
                  Object {
                    "borderRadius": 30,
                    "height": 60,
                    "width": 60,
                  },
                  Object {
                    "position": "absolute",
                  },
                  Array [
                    Object {
                      "borderRadius": 30,
                      "height": 60,
                      "width": 60,
                    },
                    undefined,
                  ],
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Regular",
            "fontSize": 20,
            "lineHeight": 27,
            "textAlign": "center",
          },
          Object {
            "margin": 10,
          },
        ]
      }
    >
      0x1bc5cbf7... requested that you...
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(74,74,74,1)",
          "fontFamily": "NunitoSans-Light",
          "fontSize": 16,
          "lineHeight": 22,
          "textAlign": "center",
        }
      }
    >
      Sent transaction
    </Text>
    <View
      style={
        Object {
          "flex": 0,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "borderRadius": 8,
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 15,
              "padding": 10,
            },
            Array [
              Object {
                "borderColor": "rgba(74,74,74,1)",
                "borderWidth": 1,
                "padding": 15,
              },
              Object {
                "marginRight": 10,
              },
            ],
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "Montserrat",
                "fontSize": 18,
                "textAlign": "center",
              },
              Object {
                "color": "rgba(74,74,74,1)",
              },
              Object {},
            ]
          }
        >
          Reject
        </Text>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "borderRadius": 8,
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 15,
              "padding": 10,
            },
            Array [
              Object {
                "backgroundColor": "rgba(91,84,199,1)",
                "padding": 15,
              },
              undefined,
            ],
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "Montserrat",
                "fontSize": 18,
                "textAlign": "center",
              },
              Object {
                "color": "#FFFFFF",
              },
              Object {},
            ]
          }
        >
          Approve
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Transaction Notification renders an transaction notification that has been authorized correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 8,
      "elevation": 2,
      "flex": 0,
      "margin": 4,
      "marginBottom": 26,
      "opacity": 1,
      "shadowColor": "rgba(0,0,0,0.07)",
      "shadowOffset": Object {
        "height": -1,
        "width": 0,
      },
      "shadowRadius": 12,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flex": 0,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "stretch",
          "alignSelf": "stretch",
          "borderBottomColor": "rgba(226,226,226,1)",
          "borderBottomWidth": 1,
          "marginBottom": 19,
          "marginTop": 19,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Regular",
            "fontSize": 22,
            "lineHeight": 30,
            "padding": 19,
            "paddingTop": 0,
            "textAlign": "center",
          }
        }
      >
        Confirm Transaction
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flex": 0,
                "justifyContent": "center",
              },
              Object {
                "backgroundColor": "white",
                "borderRadius": 50,
                "height": 60,
                "width": 60,
              },
            ]
          }
        >
          <Image
            resizeMode="cover"
            source={Object {}}
            style={
              Array [
                Object {
                  "borderRadius": 30,
                  "height": 60,
                  "width": 60,
                },
                Object {
                  "position": "absolute",
                },
                Array [
                  Object {
                    "borderRadius": 30,
                    "height": 60,
                    "width": 60,
                  },
                  undefined,
                ],
              ]
            }
          />
        </View>
      </View>
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/ForwardArrow.png",
          }
        }
        style={
          Object {
            "height": 18,
            "marginLeft": 24,
            "marginRight": 24,
            "width": 26,
          }
        }
      />
      <View>
        <View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 0,
                  "justifyContent": "center",
                },
                Object {
                  "backgroundColor": "white",
                  "borderRadius": 50,
                  "height": 60,
                  "width": 60,
                },
              ]
            }
          >
            <Image
              resizeMode="cover"
              source={Object {}}
              style={
                Array [
                  Object {
                    "borderRadius": 30,
                    "height": 60,
                    "width": 60,
                  },
                  Object {
                    "position": "absolute",
                  },
                  Array [
                    Object {
                      "borderRadius": 30,
                      "height": 60,
                      "width": 60,
                    },
                    undefined,
                  ],
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Regular",
            "fontSize": 20,
            "lineHeight": 27,
            "textAlign": "center",
          },
          Object {
            "margin": 10,
          },
        ]
      }
    >
      0x1bc5cbf7... requested that you...
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(74,74,74,1)",
          "fontFamily": "NunitoSans-Light",
          "fontSize": 16,
          "lineHeight": 22,
          "textAlign": "center",
        }
      }
    >
      Sent transaction
    </Text>
  </View>
</View>
`;

exports[`Transaction Notification renders an transaction notification that has been canceled correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 8,
      "elevation": 2,
      "flex": 0,
      "margin": 4,
      "marginBottom": 26,
      "opacity": 1,
      "shadowColor": "rgba(0,0,0,0.07)",
      "shadowOffset": Object {
        "height": -1,
        "width": 0,
      },
      "shadowRadius": 12,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flex": 0,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "stretch",
          "alignSelf": "stretch",
          "borderBottomColor": "rgba(226,226,226,1)",
          "borderBottomWidth": 1,
          "marginBottom": 19,
          "marginTop": 19,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Regular",
            "fontSize": 22,
            "lineHeight": 30,
            "padding": 19,
            "paddingTop": 0,
            "textAlign": "center",
          }
        }
      >
        Confirm Transaction
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flex": 0,
                "justifyContent": "center",
              },
              Object {
                "backgroundColor": "white",
                "borderRadius": 50,
                "height": 60,
                "width": 60,
              },
            ]
          }
        >
          <Image
            resizeMode="cover"
            source={Object {}}
            style={
              Array [
                Object {
                  "borderRadius": 30,
                  "height": 60,
                  "width": 60,
                },
                Object {
                  "position": "absolute",
                },
                Array [
                  Object {
                    "borderRadius": 30,
                    "height": 60,
                    "width": 60,
                  },
                  undefined,
                ],
              ]
            }
          />
        </View>
      </View>
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/ForwardArrow.png",
          }
        }
        style={
          Object {
            "height": 18,
            "marginLeft": 24,
            "marginRight": 24,
            "width": 26,
          }
        }
      />
      <View>
        <View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 0,
                  "justifyContent": "center",
                },
                Object {
                  "backgroundColor": "white",
                  "borderRadius": 50,
                  "height": 60,
                  "width": 60,
                },
              ]
            }
          >
            <Image
              resizeMode="cover"
              source={Object {}}
              style={
                Array [
                  Object {
                    "borderRadius": 30,
                    "height": 60,
                    "width": 60,
                  },
                  Object {
                    "position": "absolute",
                  },
                  Array [
                    Object {
                      "borderRadius": 30,
                      "height": 60,
                      "width": 60,
                    },
                    undefined,
                  ],
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Regular",
            "fontSize": 20,
            "lineHeight": 27,
            "textAlign": "center",
          },
          Object {
            "margin": 10,
          },
        ]
      }
    >
      Transaction Canceled
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(74,74,74,1)",
          "fontFamily": "NunitoSans-Light",
          "fontSize": 16,
          "lineHeight": 22,
          "textAlign": "center",
        }
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Transaction Notification renders an txhash notification correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 8,
      "elevation": 2,
      "flex": 0,
      "margin": 4,
      "marginBottom": 26,
      "opacity": 1,
      "shadowColor": "rgba(0,0,0,0.07)",
      "shadowOffset": Object {
        "height": -1,
        "width": 0,
      },
      "shadowRadius": 12,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flex": 0,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "stretch",
          "alignSelf": "stretch",
          "borderBottomColor": "rgba(226,226,226,1)",
          "borderBottomWidth": 1,
          "marginBottom": 19,
          "marginTop": 19,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Regular",
            "fontSize": 22,
            "lineHeight": 30,
            "padding": 19,
            "paddingTop": 0,
            "textAlign": "center",
          }
        }
      >
        Confirm Transaction
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flex": 0,
                "justifyContent": "center",
              },
              Object {
                "backgroundColor": "white",
                "borderRadius": 50,
                "height": 60,
                "width": 60,
              },
            ]
          }
        >
          <Image
            resizeMode="cover"
            source={Object {}}
            style={
              Array [
                Object {
                  "borderRadius": 30,
                  "height": 60,
                  "width": 60,
                },
                Object {
                  "position": "absolute",
                },
                Array [
                  Object {
                    "borderRadius": 30,
                    "height": 60,
                    "width": 60,
                  },
                  undefined,
                ],
              ]
            }
          />
        </View>
      </View>
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/ForwardArrow.png",
          }
        }
        style={
          Object {
            "height": 18,
            "marginLeft": 24,
            "marginRight": 24,
            "width": 26,
          }
        }
      />
      <View>
        <View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 0,
                  "justifyContent": "center",
                },
                Object {
                  "backgroundColor": "white",
                  "borderRadius": 50,
                  "height": 60,
                  "width": 60,
                },
              ]
            }
          >
            <Image
              resizeMode="cover"
              source={Object {}}
              style={
                Array [
                  Object {
                    "borderRadius": 30,
                    "height": 60,
                    "width": 60,
                  },
                  Object {
                    "position": "absolute",
                  },
                  Array [
                    Object {
                      "borderRadius": 30,
                      "height": 60,
                      "width": 60,
                    },
                    undefined,
                  ],
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Regular",
            "fontSize": 20,
            "lineHeight": 27,
            "textAlign": "center",
          },
          Object {
            "margin": 10,
          },
        ]
      }
    >
      You signed a transaction
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(74,74,74,1)",
          "fontFamily": "NunitoSans-Light",
          "fontSize": 16,
          "lineHeight": 22,
          "textAlign": "center",
        }
      }
    >
      0x1bc5cbf7...
    </Text>
    <View
      style={
        Object {
          "flex": 0,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "borderRadius": 8,
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 15,
              "padding": 10,
            },
            Array [
              Object {
                "borderColor": "rgba(74,74,74,1)",
                "borderWidth": 1,
                "padding": 15,
              },
              Object {
                "marginRight": 10,
              },
            ],
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "Montserrat",
                "fontSize": 18,
                "textAlign": "center",
              },
              Object {
                "color": "rgba(74,74,74,1)",
              },
              Object {},
            ]
          }
        >
          Reject
        </Text>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "borderRadius": 8,
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 15,
              "padding": 10,
            },
            Array [
              Object {
                "backgroundColor": "rgba(91,84,199,1)",
                "padding": 15,
              },
              undefined,
            ],
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "Montserrat",
                "fontSize": 18,
                "textAlign": "center",
              },
              Object {
                "color": "#FFFFFF",
              },
              Object {},
            ]
          }
        >
          Approve
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Transaction Notification renders an update uport transaction notification correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 8,
      "elevation": 2,
      "flex": 0,
      "margin": 4,
      "marginBottom": 26,
      "opacity": 1,
      "shadowColor": "rgba(0,0,0,0.07)",
      "shadowOffset": Object {
        "height": -1,
        "width": 0,
      },
      "shadowRadius": 12,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flex": 0,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "stretch",
          "alignSelf": "stretch",
          "borderBottomColor": "rgba(226,226,226,1)",
          "borderBottomWidth": 1,
          "marginBottom": 19,
          "marginTop": 19,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Regular",
            "fontSize": 22,
            "lineHeight": 30,
            "padding": 19,
            "paddingTop": 0,
            "textAlign": "center",
          }
        }
      >
        Confirm Transaction
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flex": 0,
                "justifyContent": "center",
              },
              Object {
                "backgroundColor": "white",
                "borderRadius": 50,
                "height": 60,
                "width": 60,
              },
            ]
          }
        >
          <Image
            resizeMode="cover"
            source={Object {}}
            style={
              Array [
                Object {
                  "borderRadius": 30,
                  "height": 60,
                  "width": 60,
                },
                Object {
                  "position": "absolute",
                },
                Array [
                  Object {
                    "borderRadius": 30,
                    "height": 60,
                    "width": 60,
                  },
                  undefined,
                ],
              ]
            }
          />
        </View>
      </View>
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/ForwardArrow.png",
          }
        }
        style={
          Object {
            "height": 18,
            "marginLeft": 24,
            "marginRight": 24,
            "width": 26,
          }
        }
      />
      <View>
        <View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 0,
                  "justifyContent": "center",
                },
                Object {
                  "backgroundColor": "white",
                  "borderRadius": 50,
                  "height": 60,
                  "width": 60,
                },
              ]
            }
          >
            <Image
              resizeMode="cover"
              source={Object {}}
              style={
                Array [
                  Object {
                    "borderRadius": 30,
                    "height": 60,
                    "width": 60,
                  },
                  Object {
                    "position": "absolute",
                  },
                  Array [
                    Object {
                      "borderRadius": 30,
                      "height": 60,
                      "width": 60,
                    },
                    undefined,
                  ],
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Regular",
            "fontSize": 20,
            "lineHeight": 27,
            "textAlign": "center",
          },
          Object {
            "margin": 10,
          },
        ]
      }
    >
      Updating your public uPort profile
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(74,74,74,1)",
          "fontFamily": "NunitoSans-Light",
          "fontSize": 16,
          "lineHeight": 22,
          "textAlign": "center",
        }
      }
    >
      Sent transaction
    </Text>
    <View
      style={
        Object {
          "flex": 0,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "borderRadius": 8,
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 15,
              "padding": 10,
            },
            Array [
              Object {
                "borderColor": "rgba(74,74,74,1)",
                "borderWidth": 1,
                "padding": 15,
              },
              Object {
                "marginRight": 10,
              },
            ],
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "Montserrat",
                "fontSize": 18,
                "textAlign": "center",
              },
              Object {
                "color": "rgba(74,74,74,1)",
              },
              Object {},
            ]
          }
        >
          Reject
        </Text>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "borderRadius": 8,
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 15,
              "padding": 10,
            },
            Array [
              Object {
                "backgroundColor": "rgba(91,84,199,1)",
                "padding": 15,
              },
              undefined,
            ],
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "Montserrat",
                "fontSize": 18,
                "textAlign": "center",
              },
              Object {
                "color": "#FFFFFF",
              },
              Object {},
            ]
          }
        >
          Approve
        </Text>
      </View>
    </View>
  </View>
</View>
`;
